--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{ values.packageId | dump }}_${{ values.iflowId | dump }}
+  name: ${{ values.iflowId | dump }}
 spec:
   type: service
   owner: marcoshferreira/sap-ci
